# pwdf

./: .gitignore  NOTES_TO_SELF.md  README.md  pyproject.toml  setup.py
old/: pwdf.py
pwdf/: __init__.py  cmd_line.py
rynpwdf/: __init__.py  pwdf.py
src/pwdf/: __main__.py  pwdf.py
tests/: testfile.json
